# Robotic-Car

./: CMakeLists.txt  README.md  main.c
FreeRTOS-Kernel/: History.txt  tasks.c
FreeRTOS-Kernel/include/: FreeRTOS.h  task.h
FreeRTOS-Kernel/portable/CCS/MSP430X/: portmacro.h
FreeRTOS-Kernel/portable/GCC/AVR32_UC3/: portmacro.h
FreeRTOS-Kernel/portable/IAR/AVR32_UC3/: portmacro.h
FreeRTOS-Kernel/portable/IAR/MSP430X/: portmacro.h
FreeRTOS-Kernel/portable/MSVC-MingW/: port.c
FreeRtosTest/: CMakeLists.txt  examplemain  main.c
FreeRtosTest/finalIR/: CMakeLists.txt  finalIR.c
FreeRtosTest/test/: CMakeLists.txt  blink.c
barcode/: CMakeLists.txt  barcode.c  barcode.h
blink/: CMakeLists.txt  header.h
common/: CMakeLists.txt  encoder.h  motor.h  pinaloc.h  ultrasonic.h  wheels.h
config/: FreeRTOSConfig.h
encoder/: CMakeLists.txt  encoder.c  encoder.h
magnetometer/: CMakeLists.txt  project.c  server_listener.py  wifi_magnetometer.c  wifi_magnetometer.uf2
main/: CMakeLists.txt  blink.c  main.c
motor/: CMakeLists.txt  motor.c  motor.h
ultrasonic/: CMakeLists.txt  ultrasonic.c  ultrasonic.h
